--- a/laptop/polybar/config.save.1
+++ b/laptop/polybar/config.save.1
@@ -35,12 +35,15 @@ modules-left = ewmh xwindow
 modules-center = date
 modules-right = cpu memory filesystem network battery powermenu
 
-font-0 = "Open Sans:style=Regular"
-font-1 = "FontAwesome:style=Regular"
-;font-2 = "icomoon:style=Regular"
-;font-3 = "octicons:style=Medium"
-font-4 = "Twemoji:style=Regular;size=11"
-font-5 = "Roboto:style=Medium"
+font-0 = OpenSans-Regular.ttf: Open Sans:style=Regular
+font-1 = awesome-terminal-fonts/pomicons-regular.ttf: Pomodoro:style=Regular
+font-2 = awesome-terminal-fonts/fontawesome-regular.ttf: FontAwesome:style=Regular
+font-3 = awesome-terminal-fonts/devicons-regular.ttf: icomoon:style=Regular
+font-4 = awesome-terminal-fonts/octicons-regular.ttf: octicons:style=Medium
+font-5 = awesome-terminal-fonts/programming-languages.ttf: Programming\-Languages:style=Regular
+
+
+label-font = 0
 
 ###########################################################
 ###########################################################
@@ -60,12 +63,10 @@ interval = 30
 
 mount-0 = /
 
-format-mounted-underline = ${colors.colorUnderlineNormal}
+;format-mounted-underline = ${colors.colorUnderlineNormal}
 label-mounted = %mountpoint%: %percentage_used%% usd
-format-unmounted-underline = ${colors.colorUnderlineAlt}
+;format-unmounted-underline = ${colors.colorUnderlineAlt}
 label-unmounted = %mountpoint% umtd
-label-mounted-font = 6
-label-unmounted-font = 6
 
 ###########################################################
 
@@ -74,7 +75,6 @@ type = internal/cpu
 interval = 2
 format-underline = ${colors.colorUnderlineNormal}
 label = cpu: %percentage%% utl
-label-font = 6
 
 ###########################################################
 
@@ -83,7 +83,6 @@ type = internal/memory
 interval = 2
 format-underline = ${colors.colorUnderlineNormal}
 label = memory: %percentage_used%% usd
-label-font = 6
 
 ###########################################################
 
@@ -139,16 +138,17 @@ format-packetloss-underline = ${colors.colorUnderlineAlt}
 
 ; Default: %ifname% %local_ip%
 label-connected = %ifname% con @ %essid%
-;label-connected-font = 6
-label-disconnected = %ifname% dsc
-;label-disconnected-font = 6
 
-ramp-signal-0 = -
-ramp-signal-1 = /
-ramp-signal-2 = /-
-ramp-signal-3 = //
-ramp-signal-4 = //-
-ramp-signal-5 = ///
+label-disconnected = %ifname% dsc
+
+label-packetloss = %ifname% pktlss
+
+ramp-signal-0 = 😱
+ramp-signal-1 = 😠
+ramp-signal-2 = 😒
+ramp-signal-3 = 😊
+ramp-signal-4 = 😃
+ramp-signal-5 = 😈
 
 ###########################################################
 
@@ -165,7 +165,6 @@ time-alt = %H:%M:%S
 format-underline = ${colors.colorUnderlineNormal}
 
 label = %date% %time%
-label-font = 6
 
 ###########################################################
 
@@ -199,7 +198,6 @@ format-charging-underline = ${colors.colorUnderlineNormal}
 ;   %time%
 ;   %consumption% (shows current charge rate in watts)
 label-charging = chr %percentage%% @ %consumption%W
-label-charging-font = 6
 
 ; Available tokens:
 ;   %percentage% (default) - is set to 100 if full-at is reached
@@ -207,7 +205,6 @@ label-charging-font = 6
 ;   %time%
 ;   %consumption% (shows current discharge rate in watts)
 label-discharging = dsc %percentage%%
-label-discharging-font = 6
 
 ###########################################################
 
@@ -222,8 +219,6 @@ format-underline = ${colors.colorUnderlineNormal}
 label-open = pwr >
 label-close = pwr <
 label-separator = /
-label-open-font = 6
-label-close-font = 6
 
 menu-0-0 = reboot
 menu-0-0-exec = menu-open-1
@@ -264,25 +259,20 @@ icon-3 = 4;
 icon-4 = 5;
 format = <label-state>
 label-monitor = %name%
-label-monitor-font = 6
 
 label-active = %name%
 label-active-underline= ${colors.colorUnderlineNormal}
 label-active-padding = 2
-label-active-font = 6
 
 label-occupied = %name%o
 label-occupied-padding = 2
-label-occupied-font = 6
 
 label-urgent = %name%
 label-urgent-underline = ${colors.colorUnderlineAlt}
 label-urgent-padding = 2
-label-urgent-font = 6
 
 label-empty = %name%e
 label-empty-padding = 2
-label-empty-font = 6
 
 ###########################################################
 
@@ -292,7 +282,6 @@ type = internal/xwindow
 label = %title%
 label-underline = ${colors.colorUnderlineNormal}
 label-maxlen = 30
-label-font = 6
 
 ##########################################################
 
